// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapsed.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello][]

=====================================output=====================================
![hello][]

================================================================================
`;

exports[`full.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello][world]

=====================================output=====================================
![hello][world]

================================================================================
`;

exports[`full-no-alt.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![][world]

=====================================output=====================================
![][world]

================================================================================
`;

exports[`shortcut.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello]

=====================================output=====================================
![hello]

================================================================================
`;
